[Edit] response page
